# my-ci-practice

./: .flake8  .gitignore  README.md  calculator.py  pyproject.toml  requirements.txt  test_calculator.py
.github/workflows/: ci.yml
